<resources>
    <string name="app_name">OSP2</string>
    <string name="hint_model">Модель:</string>
    <string name="hint_vin">VIN-номер:</string>
    <string name="PP">П/П</string>
    <string name="DOP">ДОП</string>
    <string name="Wash">Мойка</string>
    <string name="button_save">СОХРАНИТЬ</string>
    <string name="showroom">Шоурум</string>
    <string name="number_note">\"Номер заметки: \"</string>
    <string name="button_return">ВЫЙТИ</string>
    <string name="error_write_all_fields">Заполните все поля</string>
    <string name="todo">TODO</string>

    <array name="colors">
        <item>Белый</item>
        <item>Серебро</item>
        <item>Серый</item>
        <item>Коричневый</item>
        <item>Оранжевый</item>
        <item>Красный</item>
        <item>Синий</item>
        <item>Черный</item>
    </array>
</resources>