<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.cars.screens.AddCarActivity">


    <EditText
        android:id="@+id/editTextModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="textPersonName"
        android:hint="@string/hint_model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextVIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="number"
        android:hint="@string/hint_vin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModel" />

    <Spinner
        android:id="@+id/spinnerColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/colors"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVIN" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="231dp"
        android:layout_height="30dp"
        android:background="@drawable/button_save"
        android:text="@string/button_save"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerColors" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:textSize="14sp"
        android:background="@drawable/button_out"
        android:textColor="@color/black"
        android:text="@string/button_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

</androidx.constraintlayout.widget.ConstraintLayout>